--- a/project_1/code/starter-code.ipynb
+++ b/project_1/code/starter-code.ipynb
@@ -7547,7 +7547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: Looking at the data, participation rate for SAT are right skewed where ACT are left skewed. The spread of participation rates are quite large with no significant distribution visually. For various specific subjects, the distribution of the results are much smaller and compact. The subjects and composite scores have a slightly more symmetric distribution compared to participation rates as seen from above, the mean and median are closer."
    ]
   },
   {
@@ -7579,7 +7579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: Yes, because we have more than 30 samples. Based on Central Limit Theorem, we have 50 samples which is more than 30 samples needed to assumed a normal distribution. "
+    "Answer: No, even though we have more than 30 samples, 50 samples are still too small a sample size to see any form of normal distribution. From the histograms plotted above, we can see that there is hardly any significance that shows that it is normally distributed. "
    ]
   },
   {
@@ -7723,12 +7723,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ohio has a low SAT participation rate for both the 2017 SAT and 2018 SAT. However, it has the 7th largest state in the U.S. Based on research, it is more cost efficient to take the SAT than the ACT and also, more and more people are taking SAT examinations rather than ACT and the College Board has also been actively helping poorer students to take the SATs at a lower cost. The number of SAT exam takers have overtaken ACT over these years with ACT holding the top spot since 2012.\n",
+    "Oklahoma has a low SAT participation rate for both the 2017 SAT and 2018 SAT. Based on research, it is more cost efficient to take the SAT than the ACT and also, more and more people are taking SAT examinations rather than ACT and the College Board has also been actively helping poorer students to take the SATs at a lower cost. The number of SAT exam takers have overtaken ACT over these years with ACT holding the top spot since 2012.\n",
     "\n",
     "Source: https://www.usnews.com/education/best-colleges/articles/act-vs-sat-how-to-decide-which-test-to-take <br>\n",
     "Source: https://www.worldatlas.com/articles/us-states-by-population.html<br>\n",
-    "Source: https://dailynorthwestern.com/2018/11/12/campus/college-board-sat-overtakes-act-for-highest-number-of-test-takers/<br>"
+    "Source: https://dailynorthwestern.com/2018/11/12/campus/college-board-sat-overtakes-act-for-highest-number-of-test-takers/<br>\n",
+    "\n",
+    "The College Board offers an SAT School Day which helps schools offer the test on a school day rather than administering the test during a weekend day as it is normally administered.  This ensures that students (especially working students) have the chance to take the SAT which could then lead them to apply to colleges and further their education to ensure long careers in their chose profession. Compared to the ACT, the SAT is administered on weekends where students might be unable to take part in due to various reasons such as religious etc. ACT are both administered on weekdays and weekends and SAT has to introduce policies like SAT School Day to bring participation rates up. What I would suggest is for SAT to adopt ACT's exam schedule so that people will be more availiable to take the SAT and I believe that participation rates will increase because of this. The College Board can also work towards increasing subsidies for the lower-income families not just for the SATs and ACTs but for the subsequent college fees should they qualify for the college of their choice so that they would be even more inclined now to sit for it."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
